@@ -6,11 +6,12 @@ import com.authenticket.authenticket.dto.eventOrganiser.EventOrganiserDisplayDto
 import com.authenticket.authenticket.dto.eventOrganiser.EventOrganiserUpdateDto;
 import com.authenticket.authenticket.exception.NonExistentException;
 import com.authenticket.authenticket.model.Event;
-import com.authenticket.authenticket.repository.AdminRepository;
 import com.authenticket.authenticket.service.AmazonS3Service;
 import com.authenticket.authenticket.service.Utility;
 import com.authenticket.authenticket.model.EventOrganiser;
 import com.authenticket.authenticket.service.impl.EventOrganiserServiceImpl;
+import jakarta.servlet.http.HttpServletRequest;
+import lombok.NonNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -21,7 +22,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @CrossOrigin(
@@ -34,7 +34,7 @@ import java.util.stream.Collectors;
         allowedHeaders = {"Authorization", "Cache-Control", "Content-Type"},
         allowCredentials = "true"
 )
-@RequestMapping("/api/event-organiser")
+@RequestMapping("/api/v2/event-organiser")
 public class EventOrganiserController extends Utility {
     private final EventOrganiserServiceImpl eventOrganiserService;
 
@@ -42,17 +42,13 @@ public class EventOrganiserController extends Utility {
 
     private final PasswordEncoder passwordEncoder;
 
-    private final AdminRepository adminRepository;
-
     @Autowired
     public EventOrganiserController(EventOrganiserServiceImpl eventOrganiserService,
                                     AmazonS3Service amazonS3Service,
-                                    PasswordEncoder passwordEncoder,
-                                    AdminRepository adminRepository) {
+                                    PasswordEncoder passwordEncoder) {
         this.eventOrganiserService = eventOrganiserService;
         this.amazonS3Service = amazonS3Service;
         this.passwordEncoder = passwordEncoder;
-        this.adminRepository = adminRepository;
     }
 
     @GetMapping("/test")
@@ -65,10 +61,10 @@ public class EventOrganiserController extends Utility {
     public ResponseEntity<GeneralApiResponse<Object>> findAllEventOrganiser() {
 
         List<EventOrganiserDisplayDto> eventOrganiserList = eventOrganiserService.findAllEventOrganisers();
-        if(eventOrganiserList.isEmpty()){
+        if (eventOrganiserList.isEmpty()) {
             return ResponseEntity.ok(generateApiResponse(eventOrganiserList, "No event organisers found."));
 
-        } else{
+        } else {
             return ResponseEntity.ok(generateApiResponse(eventOrganiserList, "Event organisers successfully returned."));
 
         }
@@ -78,51 +74,26 @@ public class EventOrganiserController extends Utility {
     public ResponseEntity<GeneralApiResponse<Object>> findEventOrganiserById(@PathVariable("organiserId") Integer organiserId) {
         Optional<EventOrganiserDisplayDto> organiserDisplayDtoOptional = eventOrganiserService.findOrganiserById(organiserId);
         return organiserDisplayDtoOptional.map(eventOrganiserDisplayDto ->
-                ResponseEntity.ok(generateApiResponse(eventOrganiserDisplayDto, String.format("Event organiser %d successfully returned.", organiserId))))
+                        ResponseEntity.ok(generateApiResponse(eventOrganiserDisplayDto, String.format("Event organiser %d successfully returned.", organiserId))))
                 .orElseGet(() -> ResponseEntity.ok(generateApiResponse(null, String.format("Event organiser with id %d not found", organiserId))));
 
     }
 
     @GetMapping("/events/{organiserId}")
     public ResponseEntity<GeneralApiResponse<Object>> findAllEventsByOrganiser(@PathVariable("organiserId") Integer organiserId) {
-            List<Event> events = eventOrganiserService.findAllEventsByOrganiser(organiserId);
-            if (!events.isEmpty()) {
-                return ResponseEntity.ok(generateApiResponse(events, String.format("All events hosted by organiser %d retrieved successfully", organiserId)));
-            }
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(generateApiResponse(null, String.format("The organiser with ID %d does not have associated events or the organiser does not exist", organiserId)));
+        List<Event> events = eventOrganiserService.findAllEventsByOrganiser(organiserId);
+        if (!events.isEmpty()) {
+            return ResponseEntity.ok(generateApiResponse(events, String.format("All events hosted by organiser %d retrieved successfully", organiserId)));
+        }
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(generateApiResponse(null, String.format("The organiser with ID %d does not have associated events or the organiser does not exist", organiserId)));
 
-    }
-
-//    @GetMapping("/events/findMappedOrganisers")
-//    public ResponseEntity<GeneralApiResponse> findMappedOrganisers() {
-//        List<ArtistEvent> artistEventList = artistEventRepository.findAll();
-//
-//        List<Artist> artists = artistRepository.findAll();
-//
-//        if (!events.isEmpty()) {
-//            return ResponseEntity.ok(generateApiResponse(events, String.format("All events hosted by organiser %d retrieved successfully", organiserId)));
-//        }
-//        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(generateApiResponse(null, String.format("The organiser with ID %d does not have associated events or the organiser does not exist", organiserId)));
-//
-//    }
-
-    @PostMapping
-    public ResponseEntity<GeneralApiResponse<Object>> saveEventOrganiser(@RequestParam("name") String name,
-                                       @RequestParam("email") String email,
-                                       @RequestParam("description") String description) {
-
-            //save eventOrganiser first without image name to get the eventOrganiser id
-            EventOrganiser newEventOrganiser = new EventOrganiser(null, name, email, passwordEncoder.encode(generateRandomPassword()), description,null,false,null,"pending",null,null);
-            EventOrganiser savedEventOrganiser = eventOrganiserService.saveEventOrganiser(newEventOrganiser);
-
-            return ResponseEntity.ok(generateApiResponse(savedEventOrganiser,"Event organiser created successfully"));
     }
 
     @PutMapping
     public ResponseEntity<GeneralApiResponse<Object>> updateEventOrganiser(@RequestParam(value = "organiserId") Integer organiserId,
-                                                  @RequestParam(value = "name", required = false) String name,
-                                                  @RequestParam(value = "description", required = false) String description,
-                                                  @RequestParam(value = "password", required = false) String password) {
+                                                                           @RequestParam(value = "name", required = false) String name,
+                                                                           @RequestParam(value = "description", required = false) String description,
+                                                                           @RequestParam(value = "password", required = false) String password) {
         EventOrganiserUpdateDto eventOrganiserUpdateDto = new EventOrganiserUpdateDto(organiserId, name, description, password, null, null, null, null);
         EventOrganiser eventOrganiser = eventOrganiserService.updateEventOrganiser(eventOrganiserUpdateDto);
         if (eventOrganiser != null) {
@@ -133,24 +104,19 @@ public class EventOrganiserController extends Utility {
     }
 
     @PutMapping("/image")
-    public ResponseEntity<GeneralApiResponse<Object>> updateOrganiserImage(@RequestParam("organiserId") Integer organiserId,
-                                                @RequestParam("file") MultipartFile file) {
-        EventOrganiser eventOrganiser;
+    public ResponseEntity<GeneralApiResponse<Object>> updateOrganiserImage(@RequestParam("file") MultipartFile file,
+                                                                           @NonNull HttpServletRequest request) {
+        EventOrganiser eventOrganiser = retrieveOrganiserFromRequest(request);
         try {
             //generating the file name with the extension
             String fileExtension = getFileExtension(file.getContentType());
-            String imageName = organiserId+fileExtension;
+            String imageName = eventOrganiser.getOrganiserId() + fileExtension;
 
             //update eventOrganiser with image name and save to db
-            eventOrganiser = eventOrganiserService.updateEventOrganiserImage(organiserId,imageName);
+            eventOrganiserService.updateEventOrganiserImage(eventOrganiser.getOrganiserId(), imageName);
 
-            if(eventOrganiser !=null){
-                amazonS3Service.uploadFile(file,imageName,"event_organiser_profile");
-            } else{
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(generateApiResponse(null, "Event Organiser does not exist, file upload fail"));
-            }
-
-        }catch (AmazonS3Exception e) {
+            amazonS3Service.uploadFile(file, imageName, "event_organiser_profile");
+        } catch (AmazonS3Exception e) {
             String errorCode = e.getErrorCode();
             if ("AccessDenied".equals(errorCode)) {
                 return ResponseEntity.status(HttpStatus.FORBIDDEN).body(generateApiResponse(null, "Access Denied to Amazon."));
@@ -162,28 +128,27 @@ public class EventOrganiserController extends Utility {
             }
         }
 
-        return ResponseEntity.ok(generateApiResponse(eventOrganiser, String.format("Event organiser %d updated successfully.", organiserId)));
+        return ResponseEntity.ok(generateApiResponse(eventOrganiser, String.format("Event organiser %d updated successfully.", eventOrganiser.getOrganiserId())));
     }
 
 
-
     @PutMapping("/delete")
-    public ResponseEntity<GeneralApiResponse> deleteEventOrganiser(@RequestParam("organiserId") String organiserIdString) {
+    public ResponseEntity<GeneralApiResponse<Object>> deleteEventOrganiser(@RequestParam("organiserId") String organiserIdString) {
         try {
             List<Integer> organiserIdList = Arrays.stream(organiserIdString.split(","))
                     .map(Integer::parseInt)
-                    .collect(Collectors.toList());
+                    .toList();
 
             //check if all events exist first
-            for(Integer organiserId: organiserIdList){
-                if(eventOrganiserService.findOrganiserById(organiserId).isEmpty()){
+            for (Integer organiserId : organiserIdList) {
+                if (eventOrganiserService.findOrganiserById(organiserId).isEmpty()) {
                     throw new NonExistentException(String.format("Organiser %d does not exist, deletion halted", organiserId));
                 }
             }
 
             StringBuilder results = new StringBuilder();
 
-            for(Integer organiserId: organiserIdList){
+            for (Integer organiserId : organiserIdList) {
                 results.append(eventOrganiserService.deleteEventOrganiser(organiserId)).append(" ");
             }
 
